--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,53 +1,53 @@
 /* BASIC SETUP */
 
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    vertical-align: baseline;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+  box-sizing: border-box;
 }
 
 html {
-    color: #333333CC;
-    text-rendering: optimizeLegibility;
-    font-size: 100%;
-    line-height: 1.5;
-    font: inherit;
+  color: #333333cc;
+  text-rendering: optimizeLegibility;
+  font-size: 100%;
+  line-height: 1.5;
+  font: inherit;
 }
 
 body {
-    color: rgba(51, 51, 51, 0.8);
-    font-family: 'Overpass Mono', 'monospace';
+  color: rgba(51, 51, 51, 0.8);
+  font-family: "Overpass Mono", "monospace";
 }
 
 p {
-    margin: 0 0 .75em;
+  margin: 0 0 0.75em;
 }
 
 ul,
 ol,
 dl {
-    margin-top: 0;
-    margin-left: 1.2em;
-    margin-bottom: 1rem;
-    list-style-type: square;
-    list-style-position: outside;
-    list-style-image: none;
+  margin-top: 0;
+  margin-left: 1.2em;
+  margin-bottom: 1rem;
+  list-style-type: disc;
+  list-style-position: outside;
+  list-style-image: none;
 }
 
-ul,
+/* ul,
 ol {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 ol,
 ul {
-    list-style: none;
-}
+  list-style: none;
+} */
 
 article,
 aside,
@@ -60,22 +60,22 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 strong {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 a {
-    color: #000;
-    text-decoration: none;
-    transition: color 150ms ease;
+  color: #000;
+  text-decoration: none;
+  transition: color 150ms ease;
 }
 .roundImg {
-    border-radius: 30%;
-    border: 5px outset white;
-  }
+  border-radius: 30%;
+  border: 5px outset white;
+}
 .link,
 .intro a,
 .navbar a,
@@ -85,12 +85,12 @@ a {
 .pagination .prev,
 .pagination .next,
 .site-footer a {
-    color: rgb(10, 93, 128);
-    padding-bottom: .05em;
-    border-bottom: 2px solid transparent;
-    -webkit-transition: border 300ms linear;
-    -moz-transition: border 300ms linear;
-    transition: border 300ms linear;
+  color: rgb(10, 93, 128);
+  padding-bottom: 0.05em;
+  border-bottom: 2px solid transparent;
+  -webkit-transition: border 300ms linear;
+  -moz-transition: border 300ms linear;
+  transition: border 300ms linear;
 }
 
 .link:hover,
@@ -102,133 +102,162 @@ a {
 .pagination .prev:hover,
 .pagination .next:hover,
 .site-footer a:hover {
-    border-bottom: 2px solid #0086B3;
+  border-bottom: 2px solid #0086b3;
 }
-
 
 /* HEADER */
 
 .site-header {
-    border-bottom: 1px solid #d9d9d9;
-    margin-bottom: .75em;
-    min-height: 80px;
+  border-bottom: 1px solid #d9d9d9;
+  min-height: 80px;
 }
 
 .nav {
-    min-height: 64px;
+  min-height: 64px;
 }
 
 .container {
-    padding: 1.5em;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 800px;
-    font-weight: normal;
+  padding-top: 1.5em;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  font-weight: normal;
+}
+
+.list li {
+  margin-top: 1em;
+}
+
+.header-name {
+  font-size: 1.5em;
+  font-weight: 700;
+  text-align: center;
+  margin: 1em 0 2em 0;
+}
+
+.read-more-button {
+  margin: 2em 1em;
+}
+
+.blog-container {
+    text-align: center;
+}
+
+.blog-container img {
+    width: 75%;
+}
+
+.blog-container h1 {
+    font-size: 1em;
+}
+
+.read-more-button a {
+  padding: 0.8em 1em;
+  background-color: black;
+  color: white;
+  border-radius: 12px;
 }
 
 .flex-wrap {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .logo {
-    margin: 5px 0;
-    cursor: pointer;
-    letter-spacing: 0.8px;
-    font-size: 20px;
-    line-height: 28px;
-    font-weight: 300;
+  margin: 5px 0;
+  cursor: pointer;
+  letter-spacing: 0.8px;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 300;
 }
 
 .navbar {
-    margin: 5px 0;
-    position: relative;
-    padding: 0;
-    pointer-events: all;
-    cursor: pointer;
+  margin: 5px 0;
+  position: relative;
+  padding: 0;
+  pointer-events: all;
+  cursor: pointer;
 }
 
 .navbar li {
-    display: inline-block;
-    padding: 0 .6em;
+  display: inline-block;
+  padding: 0 0.6em;
 }
-
 
 /* ARTICLE */
 
 .container {
-    padding: 1.5em;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 800px;
-    font-weight: normal;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  font-weight: normal;
 }
 
 .page-intro {
-    border-collapse: collapse;
-    font-feature-settings: "kern", "liga", "tnum";
-    margin: .75em 0;
-    border-spacing: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    border-bottom: 1px solid #ccc;
+  border-collapse: collapse;
+  font-feature-settings: "kern", "liga", "tnum";
+  margin-bottom: 0.75em;
+  border-spacing: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  border-bottom: 1px solid #ccc;
 }
 
 .page-intro .page-intro-item {
-    padding: .75em 0;
+  padding: 0.75em 0;
 }
 
 .social {
-    margin-top: 10px;
-    display: flex;
+  margin-top: 10px;
+  display: flex;
 }
 
 .social .social-item {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 
 .fab,
 .far {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .fab {
-    font-family: "Font Awesome 5 Brands";
+  font-family: "Font Awesome 5 Brands";
 }
-  
+
 .fa,
 .fab,
 .fad,
 .fal,
 .far,
 .fas {
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    display: inline-block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    line-height: 1;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
 }
-
 
 /* FOOTER */
 
 .site-footer {
-    padding: 1.5em 0;
+  padding: 1.5em 0;
 }
 
 .site-footer small {
-    display: block;
-    font-size: .75rem;
-    color: gray;
+  display: block;
+  font-size: 0.75rem;
+  color: gray;
 }
 
 .site-footer .block {
-    display: block;
+  display: block;
 }
